adding account and GET method.
